# MadlineEngine

./: .gitignore  CMakeLists.txt  main.cpp
CelestePet/: CMakeLists.txt  main.cpp
CelestePet/include/: player.h
CelestePet/shaders/: compile_shaders.bat  gradient.comp  sky.comp  triangle.vert
CelestePet/shaders/spv/: gradient.comp.spv
CelestePet/src/: player.cpp
Engine/: CMakeLists.txt
Engine/game/include/: game_logic.h
Engine/game/src/: game_logic.cpp
Engine/include/: CelestePetConsts.h  CelestePetHeaders.h  MadlineEngine.h  MadlineEngineDefines.h  game_engine.h
Engine/platform/include/glfw/: data_type.h  game_window.h  input.h
Engine/platform/include/vulkan/: vk_descriptors.h  vk_engine.h  vk_images.h  vk_initialisers.h  vk_pipelines.h  vk_types.h
Engine/platform/include/winapi/: data_type.h  game_window.h  input.h
Engine/platform/include/windows/: data_type.h  game_window.h  input.h
Engine/platform/src/glfw/: data_type.cpp  game_window.cpp  input.cpp
Engine/platform/src/vulkan/: vk_descriptors.cpp  vk_engine.cpp  vk_images.cpp  vk_initialisers.cpp  vk_pipelines.cpp
Engine/platform/src/winapi/: data_type.cpp  game_window.cpp  input.cpp
Engine/platform/src/windows/: game_window.cpp  input.cpp
Engine/src/: game_engine.cpp
GameProject/: CMakeLists.txt  main.cpp
GameProject/include/: madline.h
GameProject/shaders/: CMakeLists.txt
GameProject/src/: madline.cpp
game/include/: game_logic.h  madline.h
game/src/: game_logic.cpp  madline.cpp
include/: CelestePetConsts.h  CelestePetHeaders.h
platform/include/vulkan/: vk_engine.h  vk_initialisers.h  vk_loader.h  vk_types.h  vulkan_engine.h
platform/include/windows/: data_type.h  game_window.h  input.h
platform/src/vulkan/: vk_engine.cpp  vk_initialisers.cpp  vk_loader.cpp  vk_pipelines.cpp  vulkan_engine.cpp
platform/src/windows/: data_type.cpp  game_window.cpp  input.cpp
platform/vulkan/include/: vk_engine.h  vk_types.h
platform/vulkan/src/: vk_engine.cpp
platform/windows/include/: data_type.h  game_window.h  input.h
platform/windows/src/: data_type.cpp  game_window.cpp  input.cpp
src/: main.cpp
